--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -262,7 +262,7 @@
             <section role="tabpanel" class="tab-pane fade" id="tabs-servicos-tab-2">
               <div class="row mt-sm">
                 <div class="col-sm-12">
-                  <h4 class="semibold"> Cadastrar novo curso</h4>
+                  <h4 class="semibold"> Cadastrar novo serviço</h4>
                   <small>Campos com asterisco vermelho ( <span class="semibold text-danger">*</span> ) são
                     obrigatórios
                   </small>
@@ -271,7 +271,7 @@
               <div class="row mt-md divider-top">
                 <div class="col-lg-4">
                   <fieldset class="form-group">
-                    <label class="form-label semibold" for="">Nome do curso <span
+                    <label class="form-label semibold" for="">Nome do serviço <span
                             class="semibold text-danger h4">*</span></label>
                     <input type="text" class="form-control" id="" placeholder="Nome do curso">
                     <small class="text-muted">Defina o nome, tomando cuidado com as pontuações.</small>
