--- a/pages/academico/grupos.html
+++ b/pages/academico/grupos.html
@@ -13,9 +13,11 @@
 
   <!-- css's gerais -->
   <link rel="stylesheet" href="../../css/lib/font-awesome/font-awesome.min.css">
+
+  <link rel="stylesheet" href="../../css/lib/bootstrap-sweetalert/sweetalert.css"/>
+
   <link rel="stylesheet" href="../../css/main.css">
   <link rel="stylesheet" href="../../css/custom.css">
-
 
 </head>
 <body class="with-side-menu" ng-app="">
@@ -41,105 +43,173 @@
     </section>
 
 
+    <div class="row mt-sm">
+      <div class="col-lg-12">
+        <div class="tabs-section">
+          <div class="tabs-section-nav">
+            <div class="tbl">
+              <ul class="nav" role="tablist">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#tabs-grupos-tab-1" role="tab" data-toggle="tab">
+									<span class="nav-link-in">
+										Grupos
+										<span class="label label-pill label-primary">10</span>
+									</span>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#tabs-grupos-tab-2" role="tab" data-toggle="tab">
+									<span class="nav-link-in">
+										<i class="fa fa-plus mr-xs" aria-hidden="true"></i>
+ Criar novo grupo
+									</span>
+                  </a>
+                </li>
+
+              </ul>
+            </div>
+          </div><!--.tabs-section-nav-->
+
+          <div class="tab-content">
 
 
-
-    <section>
-      <div class="row mt-sm">
-        <div class="col-lg-12">
-          <section class="box-typical">
-            <header class="box-typical-header header-bordered">
-              <div class="tbl-row">
-                <div class="tbl-cell tbl-cell-title">
-                  <i class="fa fa-sitemap mr-xs" aria-hidden="true"></i> <strong>7 Grupos cadastrados</strong>
+            <section role="tabpanel" class="tab-pane fade in active" id="tabs-grupos-tab-1">
+              <section>
+                <div class="row">
+                  <div class="col-sm-12">
+                    <div class="form-control-wrapper form-control-icon-right">
+                      <input type="text" class="form-control input-table-custom" placeholder="Filtre nos resultados">
+                      <i class="fa fa-search"></i>
+                    </div>
+                  </div>
                 </div>
-                <div class="tbl-cell tbl-cell-action-bordered">
-                  <button type="button" class="action-btn btn-success" data-toggle="collapse" href="#AddGrupo"
-                          aria-expanded="false" aria-controls="AddGrupo"><i class="fa fa-plus-circle mr-xs"></i>Novo
-                    grupo
+                <div id="collapse-busca-one" class="collapse mt-md" role="tabpanel"
+                     aria-labelledby="collapse-busca-one"
+                     aria-expanded="true">
+                </div>
+              </section>
+              <div class="row mt-md">
+                <div class="col-sm-12">
+                  <div class="table-responsive table-custom">
+                    <table class="datatable-on table table-hover" cellspacing="0" width="100%">
+                      <thead>
+                      <tr>
+                        <th>Nome do grupo</th>
+                        <th>Cursos associados</th>
+                        <th>Status</th>
+                        <th class="text-right">Ações</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+
+                      <tr>
+                        <td>
+                          <a data-toggle="modal"
+                             data-target="#ModalDetalhaGrupo" href="ModalDetalhaGrupo"><strong>Crianças</strong></a>
+                        </td>
+                        <td>5 Cursos</td>
+                        <td>Inativo</td>
+                        <td>
+                          <div class="btn-group btn-group-sm pull-right">
+                            <button type="button" class="btn btn-default-outline dropdown-toggle" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false">Ações
+                            </button>
+                            <div class="dropdown-menu">
+                              <a class="dropdown-item" href="grupos--editar.html"><i class="fa fa-pencil-square-o mr-xs"
+                                                                                     aria-hidden="true"></i>
+                                Editar</a>
+                              <div class="dropdown-divider"></div>
+                              <a class="dropdown-item swal-btn-cancel" href="#"><i class="fa fa-trash mr-xs"
+                                                                                   aria-hidden="true"></i>
+                                Excluir</a>
+                            </div>
+                          </div>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td><a data-toggle="modal"
+                               data-target="#ModalDetalhaGrupo" href="ModalDetalhaGrupo"><strong>jovens adultos</strong></a>
+                        </td>
+                        <td><i class="fa fa-plus-circle" aria-hidden="true"></i> Associar cursos</td>
+                        <td>Ativo</td>
+                        <td>
+                          <div class="btn-group btn-group-sm pull-right">
+                            <button type="button" class="btn btn-default-outline dropdown-toggle" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false">Ações
+                            </button>
+                            <div class="dropdown-menu">
+                              <a class="dropdown-item" href="grupos--editar.html"><i class="fa fa-pencil-square-o mr-xs"
+                                                                                     aria-hidden="true"></i>
+                                Editar</a>
+                              <div class="dropdown-divider"></div>
+                              <a class="dropdown-item swal-btn-cancel" href="#"><i class="fa fa-trash mr-xs"
+                                                                                   aria-hidden="true"></i>
+                                Excluir</a>
+                            </div>
+                          </div>
+                        </td>
+                      </tr>
+
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <section role="tabpanel" class="tab-pane fade" id="tabs-grupos-tab-2">
+              <div class="row mt-sm">
+                <div class="col-sm-12">
+                  <h4 class="semibold"> Cadastrar novo grupo</h4>
+                  <small>Campos com asterisco vermelho ( <span class="semibold text-danger">*</span> ) são
+                    obrigatórios
+                  </small>
+                </div>
+              </div>
+              <div class="row mt-md divider-top">
+                <div class="col-lg-6">
+                  <fieldset class="form-group">
+                    <label class="form-label semibold" for="">Nome do grupo <span
+                            class="semibold text-danger h4">*</span></label>
+                    <input type="text" class="form-control" id="" placeholder="Nome do grupo">
+                    <small class="text-muted">Defina o nome, tomando cuidado com as pontuações.</small>
+                  </fieldset>
+                </div>
+                <div class="col-sm-6">
+                  <label class="form-label semibold" for="">Status do curso</label>
+                  <div class="form-group mt-sm">
+                    <div class="btn-group btn-group-sm" data-toggle="buttons">
+                      <label class="btn btn-secondary active">
+                        <input type="radio" name="options" id="option1" autocomplete="off" checked=""> Ativo
+                      </label>
+                      <label class="btn btn-secondary">
+                        <input type="radio" name="options" id="option2" autocomplete="off"> Inativo
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row divider-top pb-md">
+                <div class="col-sm-12">
+                  <button type="button" class="btn btn-primary btn-success" id="notie-success"><i
+                          class="fa fa-floppy-o mr-xs"
+                          aria-hidden="true"></i>
+                    Salvar
                   </button>
+                  <a href="#tabs-grupos-tab-1" data-toggle="tab" class="btn btn-secondary ml-md"> <i class="fa fa-ban mr-xs"
+                                                                                    aria-hidden="true"></i>
+                    Cancelar</a>
                 </div>
               </div>
-            </header>
-
-            <div class="card-block">
-              <div class="clearfix collapse mt-sm mb-md pb-md divider-bottom" id="AddGrupo">
-                <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Nome do grupo">
-                        <span class="input-group-btn">
-                          <button class="btn btn-success" type="button">Salvar</button>
-                          <button class="btn btn-secondary" type="button" data-toggle="collapse" href="#AddGrupo"><i
-                                  class="fa fa-times" aria-hidden="true"></i>
-                          </button>
-                        </span>
-                </div>
-              </div>
-              <div class="table-responsive">
-                <table class="datatable-on table table-hover" cellspacing="0" width="100%">
-                  <thead>
-                  <tr>
-                    <th>Nome do grupo</th>
-                    <th>Cursos associados</th>
-                    <th class="text-right">Ações</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-
-                  <tr>
-                    <td>
-                      <a data-toggle="modal"
-                         data-target="#ModalDetalhaGrupo" href="ModalDetalhaGrupo"><strong>Crianças</strong></a></td>
-                    <td>5 Cursos</td>
-                    <td>
-                      <div class="btn-group btn-group-sm pull-right">
-                        <button type="button" class="btn btn-default-outline dropdown-toggle" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Ações
-                        </button>
-                        <div class="dropdown-menu">
-                          <a class="dropdown-item"><i class="fa fa-retweet mr-xs" aria-hidden="true"></i>
-                            Associar cursos</a>
-                          <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
-                                                               aria-hidden="true"></i>
-                            Editar</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#"><i class="fa fa-trash mr-xs" aria-hidden="true"></i>
-                            Excluir</a>
-                        </div>
-                      </div>
-                    </td>
-                  </tr>
-
-                  <tr>
-                    <td><a data-toggle="modal"
-                           data-target="#ModalDetalhaGrupo" href="ModalDetalhaGrupo"><strong>jovens adultos</strong></a></td>
-                    <td><i class="fa fa-plus-circle" aria-hidden="true"></i> Associar cursos</td>
-                    <td>
-                      <div class="btn-group btn-group-sm pull-right">
-                        <button type="button" class="btn btn-default-outline dropdown-toggle" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Ações
-                        </button>
-                        <div class="dropdown-menu">
-                          <a class="dropdown-item"><i class="fa fa-retweet mr-xs" aria-hidden="true"></i>
-                            Associar cursos</a>
-                          <a class="dropdown-item" href="#"><i class="fa fa-pencil-square-o mr-xs"
-                                                               aria-hidden="true"></i>
-                            Editar</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#"><i class="fa fa-trash mr-xs" aria-hidden="true"></i>
-                            Excluir</a>
-                        </div>
-                      </div>
-                    </td>
-                  </tr>
-
-                  </tbody>
-                </table>
-              </div>
-            </div><!--.box-typical-body-->
-          </section><!--.box-typical-->
-        </div>
+            </section>
+            <!--.tab-pane novo curso -->
+          </div><!--.tab-content-->
+        </div><!--.tabs-section-->
       </div>
-    </section>
+    </div>
+
+
   </div><!--.container-fluid-->
 </div><!--.page-content-->
 
@@ -218,8 +288,53 @@
 <script src="../../js/app.js"></script>
 <script src="../../js/plugins.js"></script>
 
+<script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
+<script src="../../js/lib/select2/select2.full.min.js"></script>
+
+<script src="../../js/lib/notie/notie.js"></script>
+<script src="../../js/lib/notie/notie-init.js"></script>
+
 <script src="../../js/lib/angular/angular.min.js"></script>
 <script src="../../js/lib/angular/controllers.js"></script>
+
+
+<script src="../../js/lib/bootstrap-sweetalert/sweetalert.min.js"></script>
+
+<script>
+  $(document).ready(function () {
+    $('.swal-btn-cancel').click(function (e) {
+      e.preventDefault();
+      swal({
+                title: "Você tem certeza desta ação?",
+                text: "Isto excluirá o grupo, mas não excluirá os cursos vinculados a ele.",
+                type: "warning",
+                showCancelButton: true,
+                confirmButtonClass: "btn-danger",
+                confirmButtonText: "Sim, deletar",
+                cancelButtonText: "Não, cancelar",
+                closeOnConfirm: false,
+                closeOnCancel: false
+              },
+              function (isConfirm) {
+                if (isConfirm) {
+                  swal({
+                    title: "Excluído!",
+                    text: "O grupo foi excluído",
+                    type: "success",
+                    confirmButtonClass: "btn-success"
+                  });
+                } else {
+                  swal({
+                    title: "Cancelado",
+                    text: "Ação cancelada",
+                    type: "error",
+                    confirmButtonClass: "btn-danger"
+                  });
+                }
+              });
+    });
+  });
+</script>
 
 <script>
 
