--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -245,7 +245,7 @@
                 <div class="col-sm-4">
                   <label class="form-label semibold" for="">Tipo de curso <span
                           class="semibold text-danger h4">*</span></label>
-                  <select class="select2-arrow">
+                  <select class="select2 select2-arrow">
                     <option>Online</option>
                     <option>Híbrido</option>
                     <option>Presencial</option>
@@ -313,7 +313,7 @@
                 </div>
                 <div class="col-lg-3">
                   <label class="form-label semibold" for="">Classificação</label>
-                  <select class="select2-arrow">
+                  <select class="select2 select2-arrow">
                     <option>Regular</option>
                     <option>Único</option>
                   </select>
