--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -139,10 +139,12 @@
                         </div>
                         <div class="row divider-top">
                           <div class="col-sm-12">
-                            <button type="button" class="btn btn-primary btn-sm">Buscar</button>
+                            <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-search mr-xs"
+                                                                                    aria-hidden="true"></i>
+                              Buscar</button>
                             <button type="button" class="btn btn-secondary btn-sm ml-md" data-toggle="collapse"
                                     data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true"
-                                    aria-controls="collapseOne">Cancelar
+                                    aria-controls="collapseOne"><i class="fa fa-times" aria-hidden="true"></i> Cancelar
                             </button>
                           </div>
                         </div>
