Ajuste em grupos

--- a/pages/academico/grupos.html
+++ b/pages/academico/grupos.html
@@ -75,14 +75,6 @@
 
             <section role="tabpanel" class="tab-pane fade in active" id="tabs-grupos-tab-1">
               <section>
-                <div class="row">
-                  <div class="col-sm-12">
-                    <div class="form-control-wrapper form-control-icon-right">
-                      <input type="text" class="form-control input-table-custom" placeholder="Filtre nos resultados">
-                      <i class="fa fa-search"></i>
-                    </div>
-                  </div>
-                </div>
                 <div id="collapse-busca-one" class="collapse mt-md" role="tabpanel"
                      aria-labelledby="collapse-busca-one"
                      aria-expanded="true">
@@ -90,7 +82,7 @@
               </section>
               <div class="row mt-md">
                 <div class="col-sm-12">
-                  <div class="table-responsive table-custom">
+                  <div class="table-responsive">
                     <table class="datatable-on table table-hover" cellspacing="0" width="100%">
                       <thead>
                       <tr>
@@ -131,7 +123,7 @@
                         <td><a data-toggle="modal"
                                data-target="#ModalDetalhaGrupo" href="ModalDetalhaGrupo"><strong>jovens adultos</strong></a>
                         </td>
-                        <td><i class="fa fa-plus-circle" aria-hidden="true"></i> Associar cursos</td>
+                        <td>0 cursos</td>
                         <td>Ativo</td>
                         <td>
                           <div class="btn-group btn-group-sm pull-right">
