Alterações na página de cursos

--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -141,7 +141,8 @@
                           <div class="col-sm-12">
                             <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-search mr-xs"
                                                                                     aria-hidden="true"></i>
-                              Buscar</button>
+                              Buscar
+                            </button>
                             <button type="button" class="btn btn-secondary btn-sm ml-md" data-toggle="collapse"
                                     data-parent="#accordion" href="#collapse-busca-one" aria-expanded="true"
                                     aria-controls="collapseOne"><i class="fa fa-times" aria-hidden="true"></i> Cancelar
@@ -246,30 +247,26 @@
                   </div>
                 </div>
                 <div class="row mt-md divider-top">
-                  <div class="col-lg-12">
+                  <div class="col-md-6">
+                    <label class="form-label semibold" for="">Selecione um curso <span
+                            class="semibold text-danger h4">*</span></label>
+                    <select class="select2 select2-arrow">
+                      <option>KIDS FUN</option>
+                      <option>JOVENS E ADULTOS</option>
+                      <option>TEENS</option>
+                      <option>TOP KIDS</option>
+                      <option>JUNIOR</option>
+                    </select>
+                  </div>
+                  <div class="col-md-6">
                     <fieldset class="form-group">
                       <label class="form-label semibold" for="">Nome do nível <span
                               class="semibold text-danger h4">*</span></label>
                       <input type="text" class="form-control" id="" placeholder="Nome do nível">
-                      <small class="text-muted">Defina o nome, tomando cuidado com as pontuações.</small>
                     </fieldset>
                   </div>
-
-                  <!--<div class="col-sm-4">
-                    <label class="form-label semibold" for="">Sistema de avaliação <span
-                            class="semibold text-danger h4">*</span></label>
-                    <select class="select2-arrow">
-                      <option>Aproveitamento</option>
-                      <option>Notas</option>
-                      <option>Objetivo</option>
-                    </select>
-                  </div>-->
                 </div>
                 <div class="row divider-top pb-md">
-                  <!--<div class="col-lg-3">
-                    <label class="form-label semibold" for="">Nota média</label>
-                    <input type="text" class="form-control" id="" placeholder="00,00">
-                  </div>-->
                   <div class="col-sm-4">
                     <label class="form-label semibold" for=""> Quatidade de Unidades <span
                             class="semibold text-danger h4">*</span></label>
@@ -296,7 +293,8 @@
                       <header class="box-typical-header header-bordered">
                         <div class="tbl-row">
                           <div class="tbl-cell tbl-cell-title">
-                            <h5 class="semibold"><i class="fa fa-book mr-xs" aria-hidden="true"></i> Materiais didáticos</h5>
+                            <h5 class="semibold"><i class="fa fa-book mr-xs" aria-hidden="true"></i> Materiais didáticos
+                            </h5>
                           </div>
                           <div class="tbl-cell tbl-cell-action-bordered">
                             <form>
