Ajustes em postos avançados

--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -311,8 +311,8 @@
                           <table class="datatable-on table table-hover">
                             <thead>
                             <tr>
-                              <th>Nome do material didático</th>
-                              <th class="text-right">Ações</th>
+                              <th></th>
+                              <th class="text-right"></th>
                             </tr>
                             </thead>
                             <tbody>
@@ -450,11 +450,6 @@
 
                 <div class="table-responsive mt-md">
                   <table class="table table-hover">
-                    <thead>
-                    <tr>
-                      <th>Nome do material</th>
-                    </tr>
-                    </thead>
                     <tbody>
                     <tr>
                       <td><p><img src="../../img/cursos/junior/junior-001.jpg" class="img-circle-xs"> Teens 1: Time
