Ajustes em Unidades e Posto avançado

--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -283,7 +283,7 @@
                   </select>
                 </div>
               </div>
-              <div class="row divider-top pb-md">
+              <div class="row divider-top">
                 <div class="col-lg-2">
                   <label class="form-label semibold" for="">Idade mínima</label>
                   <input type="number" class="form-control" id="" placeholder="Idade">
@@ -313,21 +313,8 @@
                   </div>
                 </div>
               </div>
-              <div class="row divider-top pb-md">
-                <div class="col-sm-3">
-                  <label class="form-label semibold" for="">Status do curso</label>
-                  <div class="form-group">
-                    <div class="btn-group btn-group-sm" data-toggle="buttons">
-                      <label class="btn btn-secondary active">
-                        <input type="radio" name="options" id="option1" autocomplete="off" checked=""> Ativo
-                      </label>
-                      <label class="btn btn-secondary">
-                        <input type="radio" name="options" id="option2" autocomplete="off"> Inativo
-                      </label>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
+              <div class="row divider-top">
+                <div class="col-sm-4">
                   <label class="form-label semibold" for="">Curso especial</label>
                   <div class="form-group">
                     <div class="btn-group btn-group-sm" data-toggle="buttons">
@@ -340,11 +327,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                   <label class="form-label semibold" for="">Data de criação</label>
                   <p>00/00/0000</p>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                   <label class="form-label semibold" for="">Classificação</label>
                   <select class="select2 select2-arrow">
                     <option>Regular</option>
@@ -352,13 +339,13 @@
                   </select>
                 </div>
               </div>
-              <div class="row divider-top pb-md">
+              <div class="row divider-top">
                 <div class="col-sm-12">
                   <label class="form-label semibold" for="">Objetivos do curso</label>
                   <textarea rows="4" class="form-control" placeholder="Objetivos do curso"></textarea>
                 </div>
               </div>
-              <div class="row divider-top pb-md">
+              <div class="row divider-top">
                 <div class="col-sm-12">
                   <button type="button" class="btn btn-primary btn-success" data-dismiss="modal"><i
                           class="fa fa-floppy-o mr-xs"
