--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -243,7 +243,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="row mt-md">
+                  <div class="row mt-lg">
                     <div class="col-sm-4">
                       <label class="form-label semibold" for="">CNPJ</label>
                       <p>000.000.000/0000-00</p>
@@ -501,7 +501,9 @@
               </div>
               <div class="col-sm-4">
                 <label class="form-label semibold" for="">Interessados</label>
-                <p>Crianças / Adolescentes / Jovens e adultos</p>
+                <p>Luan Almeida Barbosa</p>
+                <p>Otávio Goncalves Souza</p>
+                <p>Ana Souza Martins</p>
               </div>
             </div>
             <div class="row mt-md">
